// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> component should render with correct style when hasBackground is false and hasBorderBottom is false 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  background-color: transparent;
  border-bottom: none;
}

.emotion-0:hover {
  background-color: #e6e6e6;
  box-shadow: 0px 1px 2px 0px #1018280d;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  padding: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #1d1d1d;
}

.emotion-2:focus-visible {
  outline: 2px solid #000000;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #1d1d1d;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-5 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: grid;
  grid-template-rows: 0fr;
  -webkit-transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  color: #1d1d1d;
  padding: 0 16px 0;
}

.emotion-5>div {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="accordion-container"
  >
    <header
      aria-disabled="false"
      class="emotion-2 emotion-3"
      data-testid="accordion-header"
      role="button"
      tabindex="0"
    >
      Header Content
      <i
        class="emotion-4"
        color="#1d1d1d"
        data-testid="icon"
      >
        unfold_more
      </i>
    </header>
    <div
      aria-expanded="false"
      class="emotion-5 emotion-6"
      data-testid="accordion-body"
    >
      <div>
        <div>
          Body Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> component should render with correct style when hasBackground is true and hasBorderBottom is true 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  background-color: #f2f2f2;
  border-bottom: 1px solid #e6e6e6;
}

.emotion-0:hover {
  background-color: #e6e6e6;
  box-shadow: 0px 1px 2px 0px #1018280d;
}

.emotion-2 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 24px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 8px;
  padding: 16px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #1d1d1d;
}

.emotion-2:focus-visible {
  outline: 2px solid #000000;
}

.emotion-4 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #1d1d1d;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-5 {
  font-family: Daimler CS;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 20px;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: grid;
  grid-template-rows: 0fr;
  -webkit-transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  transition: grid-template-rows 0.3s ease-in-out,padding 0.3s ease-in-out;
  color: #1d1d1d;
  padding: 0 16px 0;
}

.emotion-5>div {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="accordion-container"
  >
    <header
      aria-disabled="false"
      class="emotion-2 emotion-3"
      data-testid="accordion-header"
      role="button"
      tabindex="0"
    >
      Header Content
      <i
        class="emotion-4"
        color="#1d1d1d"
        data-testid="icon"
      >
        unfold_more
      </i>
    </header>
    <div
      aria-expanded="false"
      class="emotion-5 emotion-6"
      data-testid="accordion-body"
    >
      <div>
        <div>
          Body Content
        </div>
      </div>
    </div>
  </div>
</div>
`;
